--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,8 +26,18 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+body{
+  background-color: var(--gray-600);
+  color: var(--gray-400);
+  -webkit-font-smoothing: antialiased;
+}
+
+body, input, textarea, button {
   font-family: 'Inter', sans-serif;
-;
+  font-weight: 400;
+  font-size: 1rem;
 }
 
 a {
