--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,7 +29,7 @@
 }
 
 body{
-  background-color: var(--gray-600);
+  /* background-color: var(--gray-600); */
   color: var(--gray-400);
   -webkit-font-smoothing: antialiased;
 }
