--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,7 @@
   --blue: #4EA8DE;
   --blue-dark: #1E6F9F;
   --danger: #E25858;
+  --white: #fff;
   
   --gray-100: #F2F2F2;
   --gray-200: #D9D9D9;
