--- a/components/TaskArea.module.css
+++ b/components/TaskArea.module.css
@@ -22,7 +22,6 @@
     width: 52rem;
     display: flex;
     justify-content: space-between;
-    gap: 35.0625rem;
 }
 
 .createdTasksContainer {
@@ -32,7 +31,6 @@
     padding: 0px;
     gap: .5rem;
 
-    width: 8.6875rem;
     height: 1.1875rem;
 }
 
@@ -51,7 +49,6 @@
     padding: 0px;
     gap: .5rem;
 
-    width: 8.6875rem;
     height: 1.1875rem;
 }
 
@@ -71,13 +68,12 @@
     line-height: 0.9375rem;
 
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 0.125rem .5rem;
     gap: 0.625rem;
 
-    width: 1.5625rem;
+    width: fit-content;
     height: 1.1875rem;
 
     background: var(--gray-400);
