--- a/components/TaskInput.module.css
+++ b/components/TaskInput.module.css
@@ -7,7 +7,8 @@
 }
 
 .container > input {
-   display: flex;
+    color: var(--gray-100);
+    display: flex;
     flex-direction: row;
     align-items: center;
     padding: 1rem;
