--- a/components/TaskItem.module.css
+++ b/components/TaskItem.module.css
@@ -21,12 +21,27 @@
     cursor: pointer;
 }
 
+.listItem svg {
+  min-width: 1.5rem;
+  min-height: 1.5rem;
+}
+
 .listItem .taskDescription{
     text-align: start;
     font-weight: 400;
     font-size: 0.875rem;
     line-height: 140%;
-    color: var(--gray-100);
+    word-break: break-all;
+    white-space: normal;
+}
+
+.todo {
+  color: var(--gray-100);
+}
+
+.done {
+  color: var(--gray-300);
+  text-decoration-line: line-through;
 }
 
 /* Hide the browser's default checkbox */
@@ -109,15 +124,6 @@
   display: none;
 }
 
-.todo {
-  background: var(--gray-500);
-  border: 2px solid var(--blue);
-}
-
-.done {
-  background: var(--purple-dark);
-  border: 2px solid var(--purple-dark);
-}
 
 .taskDescriptionContainer{
   display: flex;
